<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignIn"
  android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"


        >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome_back"
    android:textSize="@dimen/_18ssp"
    android:layout_marginTop="@dimen/_40sdp"
    android:textColor="@color/primary_text"
    android:textStyle="bold"



    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_to_continue"
    android:textSize="@dimen/_12ssp"
    android:layout_marginTop="@dimen/_4sdp"
    android:textColor="@color/secondary_text"
    android:textStyle="bold"



    />

        <EditText
            android:id="@+id/input_Email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:hint="@string/email"
            android:background="@drawable/input_background"
            android:layout_marginTop="@dimen/_40sdp"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_13ssp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:hint="@string/password"
            android:background="@drawable/input_background"
            android:layout_marginTop="@dimen/_16sdp"
            android:inputType="textPassword"
            android:textSize="@dimen/_13ssp"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                app:cornerRadius="@dimen/_8sdp"/>


<ProgressBar
    android:id="@+id/progressBarrSignIn"
    android:layout_width="@dimen/_25sdp"
    android:layout_height="@dimen/_25sdp"
    android:layout_gravity="center"
    android:visibility="invisible"/>




        </FrameLayout>






        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/primary"/>




    </LinearLayout>




</ScrollView>